Fixing z-index of projects link

--- a/src/static/App.css
+++ b/src/static/App.css
@@ -195,6 +195,10 @@ html, body {
 
     background: lightgray;
 }
+.projects-link {
+    position: relative;
+    z-index: 999;
+}
 #welcome-text::after {
     content: '';
     position: absolute;
